# SoftwareRendering

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SoftwareRendering.sln  build.bat  build.sh  setup.bat  setup.sh
SoftwareRendering/: SoftwareRendering.vcxproj  SoftwareRendering.vcxproj.filters  ThreadPool.cpp  ThreadPool.h  ThreadSafeQueue.h  main.cpp
assets/meshes/box/: box.mtl
macOS/SoftwareRendering/: color.cpp  color.hpp  defs.h  edge_function.hpp  line.hpp  mesh.cpp  mesh.hpp  point.cpp  point.hpp  rect.hpp  texture.cpp  texture.h  triangle.cpp  triangle.hpp  uv.cpp  uv.hpp
macOS/SoftwareRendering/SIMD/: integer.cpp  integer.hpp  vec4f32.cpp  vec4f32.hpp
macOS/SoftwareRendering/SoftwareRendering/: main.cpp
macOS/SoftwareRendering/SoftwareRendering.xcodeproj/: project.pbxproj
macOS/SoftwareRendering/SoftwareRendering.xcodeproj/project.xcworkspace/xcuserdata/arthurvalladares.xcuserdatad/: UserInterfaceState.xcuserstate
macOS/SoftwareRendering/SoftwareRendering.xcodeproj/project.xcworkspace/xcuserdata/arthurvalladares.xcuserdatad/xcdebugger/: Expressions.xcexplist
macOS/SoftwareRendering/SoftwareRendering.xcodeproj/xcshareddata/xcschemes/: SoftwareRendering.xcscheme
macOS/SoftwareRendering/SoftwareRendering.xcodeproj/xcuserdata/arthurvalladares.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
macOS/SoftwareRendering/SoftwareRendering.xcodeproj/xcuserdata/arthurvalladares.xcuserdatad/xcschemes/: xcschememanagement.plist
src/: camera.cpp  camera.h  cmake_defs.h  cmake_defs.h.in  color.cpp  color.h  color.hpp  defs.h  depth_buffer.cpp  depth_buffer.h  edge_function.cpp  edge_function.h  edge_function.hpp  line.cpp  line.h  main.cpp  mesh.cpp  mesh.h  overdraw_indicator.cpp  overdraw_indicator.h  point.cpp  point.h  point.hpp  rect.cpp  rect.h  screen_tile.cpp  screen_tile.h  texture.cpp  texture.h  transform.cpp  transform.h  triangle.cpp  triangle.h  uv.cpp  uv.h  vector.cpp  vector.h  vertex.h  viewport.cpp  viewport.h
src/SIMD/: vec4f32.cpp  vec4f32.h  vec4f32.hpp  vec4i32.cpp  vec4i32.h  vec4i32.hpp
src/math/: mat4f32.cpp  mat4f32.h  vec3f32.cpp  vec3f32.h  vec4f32.cpp  vec4f32.h  vec4i32.cpp  vec4i32.h  vector.cpp
src/mesh/: mesh.cpp  mesh.h  obj.cpp  obj.h
